[gd_scene load_steps=16 format=3 uid="uid://dq48ek1cmrexf"]

[ext_resource type="StyleBox" uid="uid://db2rsd8ficf4o" path="res://resources/betterwindow.tres" id="1_gdggg"]
[ext_resource type="Script" path="res://resources/scenes/lockedfolder/window/scripts/authenticate_popup.gd" id="2_t6mlv"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://resources/fonts/Vermin Vibes 1989.ttf" id="3_78nmx"]
[ext_resource type="StyleBox" uid="uid://djpqbyxyro8sk" path="res://resources/invisible.tres" id="4_2pwua"]
[ext_resource type="StyleBox" uid="uid://b8d6vo61he8cd" path="res://resources/passwordinputbox.tres" id="5_lh1qc"]
[ext_resource type="StyleBox" uid="uid://cqwcpaf5fy6a7" path="res://resources/button.tres" id="6_vfbe7"]
[ext_resource type="Shader" uid="uid://cw5fjbt1la28f" path="res://shaders/color_replace_shader.res" id="7_1o28u"]
[ext_resource type="Texture2D" uid="uid://jt6tdmef2yl4" path="res://resources/sprites/checkmark-symbolic.svg" id="8_eankx"]
[ext_resource type="AudioStream" uid="uid://bec51h6ctq2uo" path="res://resources/audio/wrong.wav" id="9_cb5db"]
[ext_resource type="AudioStream" uid="uid://cn8sj2ajke2r6" path="res://resources/audio/close.wav" id="11_y4xvw"]

[sub_resource type="LabelSettings" id="LabelSettings_p6fgv"]
font = ExtResource("3_78nmx")

[sub_resource type="LabelSettings" id="LabelSettings_7enhi"]
font = ExtResource("3_78nmx")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rhlb"]
bg_color = Color(0.064075, 0.0793855, 0.122807, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crjd4"]
shader = ExtResource("7_1o28u")
shader_parameter/replaceAmount = 1.0
shader_parameter/replaceColor = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_85uop"]
font = ExtResource("3_78nmx")
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 4

[node name="popup" type="Panel" groups=["authentication"]]
offset_right = 112.0
offset_bottom = 48.0
scale = Vector2(1.55103, 1.48918)
theme_override_styles/panel = ExtResource("1_gdggg")
script = ExtResource("2_t6mlv")
metadata/_edit_group_ = true

[node name="password" type="Label" parent="."]
layout_mode = 0
offset_left = 24.6666
offset_top = 18.6666
offset_right = 131.667
offset_bottom = 32.6666
scale = Vector2(0.5, 0.5)
text = "Digite a senha:"
label_settings = SubResource("LabelSettings_p6fgv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="windowname" type="Label" parent="."]
layout_mode = 0
offset_left = 24.5
offset_top = 2.0
offset_right = 126.5
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
text = "Autenticar
"
label_settings = SubResource("LabelSettings_7enhi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -9.33335
offset_top = 1.99991
offset_right = 5.66666
offset_bottom = 8.99991
grow_horizontal = 0
theme_override_constants/separation = 1
metadata/_edit_group_ = true

[node name="close" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_styles/hover = ExtResource("4_2pwua")
theme_override_styles/pressed = ExtResource("4_2pwua")
theme_override_styles/normal = ExtResource("4_2pwua")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.6666
offset_top = 29.3332
offset_right = 301.667
offset_bottom = 67.3332
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_78nmx")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("5_lh1qc")
theme_override_styles/normal = ExtResource("5_lh1qc")
max_length = 9

[node name="confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 82.6666
offset_top = 29.3332
offset_right = 122.667
offset_bottom = 69.3332
scale = Vector2(0.2, 0.2)
theme_override_styles/hover = ExtResource("6_vfbe7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5rhlb")
theme_override_styles/normal = ExtResource("6_vfbe7")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="confirm"]
material = SubResource("ShaderMaterial_crjd4")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_eankx")

[node name="INCORRECT" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 24.6666
offset_top = 37.3332
offset_right = 296.667
offset_bottom = 65.3332
scale = Vector2(0.2, 0.2)
text = "!!Senha incorreta!!"
label_settings = SubResource("LabelSettings_85uop")

[node name="wrong" type="AudioStreamPlayer" parent="INCORRECT"]
stream = ExtResource("9_cb5db")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="resizehandle" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.035
offset_top = 2.0
offset_right = 94.035
offset_bottom = 9.0
theme_override_styles/panel = ExtResource("4_2pwua")

[node name="close_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_y4xvw")

[connection signal="pressed" from="HBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="confirm" to="." method="_on_confirm_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="gui_input" from="resizehandle" to="." method="_on_resizehandle_gui_input"]
